pass all current tests with java 11
See also WW-4981