@@ -179,7 +179,8 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
-                                <argLine>--add-modules java.activation --add-modules java.xml.bind</argLine>
+                                <!-- TODO: delete forkCount=0 after fix of https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
+                                <forkCount>0</forkCount>
                             </configuration>
                         </plugin>
                     </plugins>
